# sonare

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: backend.rs  http.rs  main.rs  soundcloud.rs
src/http/: server.rs
src/providers/: mod.rs  soundcloud.rs
