[package]
name = "mopidy-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "*"
mpd = { git = "https://github.com/htkhiem/rust-mpd" }
reqwest = { version = "*", features = ["stream", "json"] }
soundcloud-rs = "*"
tokio = { version = "*", features = ["full"] }
toml = "*"


[profile.dev]
incremental = true

[profile.release]
lto = true
opt-level = 3
