[package]
name = "sonare"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "*"
mpd = "*"
reqwest = { version = "*", features = ["stream", "json"] }
soundcloud-rs = "*"
tokio = { version = "*", features = ["full"] }
toml = "*"
gstreamer = "*"
gstreamer-app = "*"
gstreamer-player = "*"
async-trait = "*"


[profile.dev]
incremental = true

[profile.release]
lto = true
opt-level = 3
